// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lexer > snapshots > should lex a \`showLineNumbers \`identifier 1`] = `
[
  {
    "end": 15,
    "start": 0,
    "type": "identifier",
    "value": "showLineNumbers",
  },
]
`;

exports[`lexer > snapshots > should lex a brace pair 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "type": "symbol",
    "value": "{",
  },
  {
    "end": 6,
    "start": 1,
    "type": "literal",
    "value": "range",
  },
  {
    "end": 7,
    "start": 6,
    "type": "symbol",
    "value": "}",
  },
]
`;

exports[`lexer > snapshots > should lex a dash pair 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "type": "symbol",
    "value": "/",
  },
  {
    "end": 5,
    "start": 1,
    "type": "literal",
    "value": "word",
  },
  {
    "end": 6,
    "start": 5,
    "type": "symbol",
    "value": "/",
  },
]
`;

exports[`lexer > snapshots > should lex a double quote pair 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "type": "symbol",
    "value": """,
  },
  {
    "end": 7,
    "start": 1,
    "type": "literal",
    "value": "double",
  },
  {
    "end": 8,
    "start": 7,
    "type": "symbol",
    "value": """,
  },
]
`;

exports[`lexer > snapshots > should lex a paren pair 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "type": "symbol",
    "value": "(",
  },
  {
    "end": 9,
    "start": 1,
    "type": "literal",
    "value": "argument",
  },
  {
    "end": 10,
    "start": 9,
    "type": "symbol",
    "value": ")",
  },
]
`;

exports[`lexer > snapshots > should lex a range 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "type": "symbol",
    "value": "{",
  },
  {
    "end": 7,
    "start": 1,
    "type": "literal",
    "value": "3..5,7",
  },
  {
    "end": 8,
    "start": 7,
    "type": "symbol",
    "value": "}",
  },
]
`;

exports[`lexer > snapshots > should lex a single identifier 1`] = `
[
  {
    "end": 10,
    "start": 0,
    "type": "identifier",
    "value": "javascript",
  },
]
`;

exports[`lexer > snapshots > should lex a single quote pair 1`] = `
[
  {
    "end": 1,
    "start": 0,
    "type": "symbol",
    "value": "'",
  },
  {
    "end": 7,
    "start": 1,
    "type": "literal",
    "value": "single",
  },
  {
    "end": 8,
    "start": 7,
    "type": "symbol",
    "value": "'",
  },
]
`;

exports[`lexer > snapshots > should lex a starting line number 1`] = `
[
  {
    "end": 15,
    "start": 0,
    "type": "identifier",
    "value": "showLineNumbers",
  },
  {
    "end": 16,
    "start": 15,
    "type": "symbol",
    "value": "{",
  },
  {
    "end": 17,
    "start": 16,
    "type": "literal",
    "value": "5",
  },
  {
    "end": 18,
    "start": 17,
    "type": "symbol",
    "value": "}",
  },
]
`;

exports[`lexer > snapshots > should lex a title 1`] = `
[
  {
    "end": 5,
    "start": 0,
    "type": "identifier",
    "value": "title",
  },
  {
    "end": 6,
    "start": 5,
    "type": "symbol",
    "value": "=",
  },
  {
    "end": 7,
    "start": 6,
    "type": "symbol",
    "value": """,
  },
  {
    "end": 18,
    "start": 7,
    "type": "literal",
    "value": "hello lexer",
  },
  {
    "end": 19,
    "start": 18,
    "type": "symbol",
    "value": """,
  },
]
`;
